# counterfeiter

./: Cargo.toml  README.md
data/: Lba1.allReadCounts_single
src/: allreads.rs  cell.rs  genome.rs  main.rs
src/lineagemodels/: cas12a_abe.rs  cas9_WT.rs  crispr_bit.rs  ec_dna.rs  model.rs
