[package]
name = "counterfeiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
rand = "*"
array_tool = "*"
weighted_rand = "*"
bio = "1"
rustc-hash = "2.0"
regex = "1.7.3"
rand_distr = "*"